[package]
name = "rustz80emu"
version = "0.2.0"
authors = ["Andrei Faur <da3drus@gmail.com>"]
license = "MIT"

[dependencies]
enum_primitive = "0.1.0"
num = "0.1.34"
bitflags = "0.7.0"
log = "0.3.6"
env_logger = "0.3.4"
bincode = "*"
rustc-serialize = "*"

[lib]
name = "z80emulib"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "z80emubin"
path = "src/main.rs"
test = false
