[package]
name = "rustz80emu"
version = "0.3.0"
authors = ["Andrei Faur <da3drus@gmail.com>"]
license = "MIT"

[dependencies]
enum_primitive = "*"
num = "*"
bitflags = "*"
log = "*"
env_logger = "*"
bincode = "*"
rustc-serialize = "*"
nom = "*"
text_io = "*"

[lib]
name = "z80emulib"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "z80emubin"
path = "src/main.rs"
test = false
