[package]
name = "rustz80emu"
version = "0.4.1"
authors = ["Andrei Faur <da3drus@gmail.com>"]
license = "MIT"

[dependencies]
enum_primitive = "*"
num = "*"
bitflags = "*"
log = "*"
env_logger = "*"
bincode = "*"
rustc-serialize = "*"
nom = "*"
text_io = "*"
sdl2 = "*"
lazy_static = "*"
getopts = "*"


[features]
# This feature is only meant to be used by the fuse tests
trace-interconnect = []

[lib]
name = "z80emulib"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "z80emubin"
path = "src/main.rs"
test = false
